Add ng-auth. Add login route

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,8 @@
     <script src="bower_components/ionic/release/js/ionic.js"></script>
     <script src="bower_components/ionic/release/js/ionic-angular.js"></script>
     <script src="bower_components/ngCordova/dist/ng-cordova.js"></script>
+    <script src="bower_components/angular-cookie/angular-cookie.js"></script>
+    <script src="bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -35,12 +37,14 @@
     <!-- your app's js -->
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers.js"></script>
     <script src="scripts/configuration.js"></script>
+    <script src="scripts/config/login-config.js"></script>
+    <script src="scripts/controllers.js"></script>
+    <script src="scripts/controllers/login-controller.js"></script>
     <!-- endbuild -->
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="porttare">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
