Move constants config to another folder. Define modules into app.js

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
     <!-- your app's js -->
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/configuration.js"></script>
+    <script src="scripts/config/constants-config.js"></script>
     <script src="scripts/config/login-config.js"></script>
     <script src="scripts/controllers.js"></script>
     <script src="scripts/controllers/login-controller.js"></script>
