--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
     <script src="scripts/config/login-config.js"></script>
     <script src="scripts/controllers.js"></script>
     <script src="scripts/controllers/login-controller.js"></script>
+    <script src="scripts/controllers/register-controller.js"></script>
     <!-- endbuild -->
   </head>
 
