--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="bower_components/ionic/release/css/ionic.css" />
     <!-- endbower -->
     <!-- endbuild -->
-    <link href="styles/style.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="styles/ionic.app.css" rel="stylesheet">
@@ -40,13 +40,17 @@
     <script src="scripts/config/constants-config.js"></script>
     <script src="scripts/config/login-config.js"></script>
     <script src="scripts/controllers.js"></script>
+    <script src="scripts/controllers/site-controller.js"></script>
     <script src="scripts/controllers/login-controller.js"></script>
     <script src="scripts/controllers/register-controller.js"></script>
     <script src="scripts/controllers/reset-controller.js"></script>
+    <script src="scripts/controllers/intro-controller.js"></script>
     <!-- endbuild -->
   </head>
 
-  <body ng-app="porttare">
+  <body ng-app="porttare" ng-controller="SiteController as siteVm">
+    <ion-nav-bar class="bar-light">
+    </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
