Reset password using email (#6)
* Restore password

* Use a button instead of link

* Rename email container object

* Add 'reset password' specs

* Send 'resetPasswordForm' to backend

* Update password

* Refactor code

* Clean code

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
     <script src="scripts/controllers.js"></script>
     <script src="scripts/controllers/login-controller.js"></script>
     <script src="scripts/controllers/register-controller.js"></script>
+    <script src="scripts/controllers/reset-controller.js"></script>
     <!-- endbuild -->
   </head>
 
