--- a/app/index.html
+++ b/app/index.html
@@ -34,17 +34,25 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- google maps -->
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyDbY9wkWTMUHeT_J2Uehq0-i0S1PCaybFE&libraries=places"></script>
+
     <!-- your app's js -->
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/config/constants-config.js"></script>
     <script src="scripts/config/login-config.js"></script>
+    <!-- controllers -->
     <script src="scripts/controllers.js"></script>
     <script src="scripts/controllers/site-controller.js"></script>
     <script src="scripts/controllers/login-controller.js"></script>
     <script src="scripts/controllers/register-controller.js"></script>
     <script src="scripts/controllers/reset-controller.js"></script>
     <script src="scripts/controllers/intro-controller.js"></script>
+    <script src="scripts/controllers/map-controller.js"></script>
+    <!-- services -->
+    <script src="scripts/services.js"></script>
+    <script src="scripts/services/geolocation-service.js"></script>
     <!-- endbuild -->
   </head>
 
