--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,9 @@
     <!-- services -->
     <script src="scripts/services.js"></script>
     <script src="scripts/services/geolocation-service.js"></script>
+    <!-- directives -->
+    <script src="scripts/directives.js"></script>
+    <script src="scripts/directives/back-button/back-button.js"></script>
     <!-- endbuild -->
   </head>
 
