--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
     <!-- directives -->
     <script src="scripts/directives.js"></script>
     <script src="scripts/directives/back-button/back-button.js"></script>
+    <script src="scripts/directives/autosize-input/autosize-input.js"></script>
     <!-- endbuild -->
   </head>
 
