--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
     <script src="scripts/services.js"></script>
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/login-service.js"></script>
+    <script src="scripts/services/localstorage-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives.js"></script>
     <script src="scripts/directives/back-button/back-button.js"></script>
