--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
     <script src="scripts/controllers/intro-controller.js"></script>
     <script src="scripts/controllers/map-controller.js"></script>
     <script src="scripts/controllers/pre-login-controller.js"></script>
+    <script src="scripts/controllers/category-controller.js"></script>
     <!-- services -->
     <script src="scripts/services.js"></script>
     <script src="scripts/services/geolocation-service.js"></script>
