--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
     <script src="bower_components/ngCordova/dist/ng-cordova.js"></script>
     <script src="bower_components/angular-cookie/angular-cookie.js"></script>
     <script src="bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -42,6 +43,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/config/constants-config.js"></script>
     <script src="scripts/config/login-config.js"></script>
+    <script src="scripts/config/translations-config.js"></script>
     <!-- controllers -->
     <script src="scripts/controllers.js"></script>
     <script src="scripts/controllers/site-controller.js"></script>
