--- a/app/index.html
+++ b/app/index.html
@@ -54,15 +54,18 @@
     <script src="scripts/controllers/map-controller.js"></script>
     <script src="scripts/controllers/pre-login-controller.js"></script>
     <script src="scripts/controllers/category-controller.js"></script>
+    <script src="scripts/controllers/provider-controller.js"></script>
     <!-- services -->
     <script src="scripts/services.js"></script>
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/login-service.js"></script>
     <script src="scripts/services/localstorage-service.js"></script>
+    <script src="scripts/services/provider-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives.js"></script>
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
+    <script src="scripts/directives/show-error/show-error.js"></script>
     <!-- endbuild -->
   </head>
 
