--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
     <script src="bower_components/angular-cookie/angular-cookie.js"></script>
     <script src="bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
+    <script src="bower_components/airbrake-js-client/dist/client.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -61,6 +62,7 @@
     <script src="scripts/services/login-service.js"></script>
     <script src="scripts/services/localstorage-service.js"></script>
     <script src="scripts/services/provider-service.js"></script>
+    <script src="scripts/services/airbrake-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives.js"></script>
     <script src="scripts/directives/back-button/back-button.js"></script>
