--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
     <script src="scripts/controllers/pre-login-controller.js"></script>
     <script src="scripts/controllers/category-controller.js"></script>
     <script src="scripts/controllers/provider-controller.js"></script>
+    <script src="scripts/controllers/products-controller.js"></script>
     <!-- services -->
     <script src="scripts/services.js"></script>
     <script src="scripts/services/geolocation-service.js"></script>
@@ -63,6 +64,7 @@
     <script src="scripts/services/localstorage-service.js"></script>
     <script src="scripts/services/provider-service.js"></script>
     <script src="scripts/services/airbrake-service.js"></script>
+    <script src="scripts/services/products-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives.js"></script>
     <script src="scripts/directives/back-button/back-button.js"></script>
