--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,7 @@
     <script src="scripts/config/constants-config.js"></script>
     <script src="scripts/config/login-config.js"></script>
     <script src="scripts/config/translations-config.js"></script>
+    <script src="scripts/config/app-constants.js"></script>
     <!-- controllers -->
     <script src="scripts/controllers.js"></script>
     <script src="scripts/controllers/site-controller.js"></script>
