Manage items from providers (#40)
* Rebase feature-manage-items-from-provider to master

* JSHint correction

* Refactored code

* Code refactoring

* Code refactoring

* Code refactoring

* Changing styles
* Changing names of variables and functions

* Code refactoring

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
     <script src="scripts/controllers/category-controller.js"></script>
     <script src="scripts/controllers/provider-controller.js"></script>
     <script src="scripts/controllers/products-controller.js"></script>
+    <script src="scripts/controllers/items-controller.js"></script>
     <!-- services -->
     <script src="scripts/services.js"></script>
     <script src="scripts/services/geolocation-service.js"></script>
@@ -66,6 +67,7 @@
     <script src="scripts/services/provider-service.js"></script>
     <script src="scripts/services/airbrake-service.js"></script>
     <script src="scripts/services/products-service.js"></script>
+    <script src="scripts/services/items-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives.js"></script>
     <script src="scripts/directives/back-button/back-button.js"></script>
