--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/ionic/release/css/ionic.css" />
+    <link rel="stylesheet" href="bower_components/slick-carousel/slick/slick.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <link href="styles/main.css" rel="stylesheet">
@@ -19,6 +20,7 @@
     <!-- ionic/angularjs js -->
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
@@ -30,6 +32,8 @@
     <script src="bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
     <script src="bower_components/airbrake-js-client/dist/client.js"></script>
+    <script src="bower_components/slick-carousel/slick/slick.js"></script>
+    <script src="bower_components/angular-slick-carousel/dist/angular-slick.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -55,6 +59,7 @@
     <script src="scripts/controllers/intro-controller.js"></script>
     <script src="scripts/controllers/map-controller.js"></script>
     <script src="scripts/controllers/pre-login-controller.js"></script>
+    <script src="scripts/controllers/categories-controller.js"></script>
     <script src="scripts/controllers/category-controller.js"></script>
     <script src="scripts/controllers/provider-controller.js"></script>
     <script src="scripts/controllers/products-controller.js"></script>
