enhance precio input
add ng-upload

Move logic to service

fix param name

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
     <script src="bower_components/airbrake-js-client/dist/client.js"></script>
     <script src="bower_components/slick-carousel/slick/slick.js"></script>
     <script src="bower_components/angular-slick-carousel/dist/angular-slick.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
