--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <script src="scripts/controllers/provider-controller.js"></script>
     <script src="scripts/controllers/products-controller.js"></script>
     <script src="scripts/controllers/items-controller.js"></script>
+    <script src="scripts/controllers/provider-detail-controller.js"></script>
     <!-- services -->
     <script src="scripts/services.js"></script>
     <script src="scripts/services/geolocation-service.js"></script>
