--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
     <script src="scripts/controllers/error-controller.js"></script>
     <script src="scripts/controllers/courier-controller.js"></script>
     <script src="scripts/controllers/profile-controller.js"></script>
+    <script src="scripts/controllers/product-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
