--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
     <script src="scripts/services/airbrake-service.js"></script>
     <script src="scripts/services/products-service.js"></script>
     <script src="scripts/services/items-service.js"></script>
+    <script src="scripts/services/categories-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives.js"></script>
     <script src="scripts/directives/back-button/back-button.js"></script>
