Feature manage clients from provider (#49)
* Code Refactoring

* Code Refactoring

* Modal without script tag

* Code Refactoring

* Service without $q
* Create modal service

* Code Refactoring

* Correction jshint

* Changes in logic, styles and code refactoring

* Code refactoring

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
     <script src="scripts/controllers/products-controller.js"></script>
     <script src="scripts/controllers/items-controller.js"></script>
     <script src="scripts/controllers/provider-detail-controller.js"></script>
+    <script src="scripts/controllers/clients-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
@@ -77,6 +78,8 @@
     <script src="scripts/services/products-service.js"></script>
     <script src="scripts/services/items-service.js"></script>
     <script src="scripts/services/categories-service.js"></script>
+    <script src="scripts/services/clients-service.js"></script>
+    <script src="scripts/services/modal-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
