--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
     <script src="scripts/controllers/items-controller.js"></script>
     <script src="scripts/controllers/provider-detail-controller.js"></script>
     <script src="scripts/controllers/clients-controller.js"></script>
+    <script src="scripts/controllers/error-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
