--- a/app/index.html
+++ b/app/index.html
@@ -81,10 +81,13 @@
     <script src="scripts/services/categories-service.js"></script>
     <script src="scripts/services/clients-service.js"></script>
     <script src="scripts/services/modal-service.js"></script>
+    <script src="scripts/services/category-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
     <script src="scripts/directives/show-error/show-error.js"></script>
+    <!-- filters -->
+    <script src="scripts/filters/default-image.js"></script>
     <!-- endbuild -->
   </head>
 
