--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/ionic/release/css/ionic.css" />
     <link rel="stylesheet" href="bower_components/slick-carousel/slick/slick.css" />
+    <link rel="stylesheet" href="bower_components/ion-datetime-picker/release/ion-datetime-picker.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <link href="styles/main.css" rel="stylesheet">
@@ -35,6 +36,7 @@
     <script src="bower_components/slick-carousel/slick/slick.js"></script>
     <script src="bower_components/angular-slick-carousel/dist/angular-slick.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+    <script src="bower_components/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
