Enhancements of items (#74)
* Enhancements of items

* Code refactoring(structure)
* Changes in styles
* Add specs

* Code refactoring

*Add common service

* Fix to similar code

* Fixed similar code

* Corrections in spec

--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
     <script src="scripts/services/clients-service.js"></script>
     <script src="scripts/services/modal-service.js"></script>
     <script src="scripts/services/category-service.js"></script>
+    <script src="scripts/services/common-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
