--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
     <script src="scripts/controllers/provider-detail-controller.js"></script>
     <script src="scripts/controllers/clients-controller.js"></script>
     <script src="scripts/controllers/error-controller.js"></script>
+    <script src="scripts/controllers/courier-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
@@ -85,6 +86,7 @@
     <script src="scripts/services/modal-service.js"></script>
     <script src="scripts/services/category-service.js"></script>
     <script src="scripts/services/common-service.js"></script>
+    <script src="scripts/services/courier-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
