--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
     <script src="bower_components/angular-slick-carousel/dist/angular-slick.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <script src="bower_components/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -69,6 +70,7 @@
     <script src="scripts/controllers/clients-controller.js"></script>
     <script src="scripts/controllers/error-controller.js"></script>
     <script src="scripts/controllers/courier-controller.js"></script>
+    <script src="scripts/controllers/profile-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
@@ -84,12 +86,14 @@
     <script src="scripts/services/category-service.js"></script>
     <script src="scripts/services/common-service.js"></script>
     <script src="scripts/services/courier-service.js"></script>
+    <script src="scripts/services/profile-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
     <script src="scripts/directives/show-error/show-error.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
+    <script src="scripts/filters/age.js"></script>
     <!-- endbuild -->
   </head>
 
