--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,7 @@
     <script src="scripts/services/profile/profile-addresses-service.js"></script>
     <script src="scripts/services/error-handler-service.js"></script>
     <script src="scripts/services/maps-service.js"></script>
+    <script src="scripts/services/cart-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
