--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
     <script src="scripts/controllers/profile/profile-create-addresses-controller.js"></script>
     <script src="scripts/controllers/profile/profile-update-addresses-controller.js"></script>
     <script src="scripts/controllers/cart-controller.js"></script>
+    <script src="scripts/controllers/courier/orders.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
