--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
     <script src="scripts/config/http-provider.js"></script>
     <script src="scripts/config/routes.js"></script>
     <script src="scripts/config/ionic-config.js"></script>
+    <script src="scripts/config/scrolling.js"></script>
     <!-- controllers -->
     <script src="scripts/controllers/site-controller.js"></script>
     <script src="scripts/controllers/login-controller.js"></script>
