Add slick-provider directive (#117)

--- a/app/index.html
+++ b/app/index.html
@@ -106,6 +106,8 @@
     <script src="scripts/directives/product-counter/product-counter.js"></script>
     <script src="scripts/directives/link-button/link-button.js"></script>
     <script src="scripts/directives/action-button/action-button.js"></script>
+    <script src="scripts/directives/slick-wrapper/slick-wrapper.js"></script>
+    <script src="scripts/directives/slick-provider/slick-provider.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
