--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
     <script src="scripts/controllers/cart-controller.js"></script>
     <script src="scripts/controllers/courier/orders.js"></script>
     <script src="scripts/controllers/menu-controller.js"></script>
+    <script src="scripts/controllers/wishlists-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
@@ -101,6 +102,7 @@
     <script src="scripts/services/maps-service.js"></script>
     <script src="scripts/services/cart-service.js"></script>
     <script src="scripts/services/user-auth-service.js"></script>
+    <script src="scripts/services/wishlists-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
@@ -113,6 +115,7 @@
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
+    <script src="scripts/filters/custom-date.js"></script>
     <!-- endbuild -->
   </head>
 
