Inicio para listar direcciones de facturación - Comprador (#96)
* Inicio para listar direcciones de facturación - Comprador

* Creación y edición de direcciones de facturación

* Corección código fuente

* Validación campos

* Solución código duplicado

* Validación campos y código duplicado

* Refactorización de código, Error en consumir Servicio

* Refactorización de codigo

* Eliminación de código no utilizado

--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
     <script src="scripts/controllers/courier/orders.js"></script>
     <script src="scripts/controllers/menu-controller.js"></script>
     <script src="scripts/controllers/wishlists-controller.js"></script>
+    <script src="scripts/controllers/billing-addresses-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
@@ -103,6 +104,7 @@
     <script src="scripts/services/cart-service.js"></script>
     <script src="scripts/services/user-auth-service.js"></script>
     <script src="scripts/services/wishlists-service.js"></script>
+    <script src="scripts/services/billing-addresses-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
