--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,9 @@
     <script src="scripts/controllers/menu-controller.js"></script>
     <script src="scripts/controllers/wishlists-controller.js"></script>
     <script src="scripts/controllers/billing-addresses-controller.js"></script>
+    <script src="scripts/controllers/offices-controller.js"></script>
+    <script src="scripts/controllers/office-controller.js"></script>
+    <script src="scripts/controllers/profile-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
@@ -106,6 +109,8 @@
     <script src="scripts/services/user-auth-service.js"></script>
     <script src="scripts/services/wishlists-service.js"></script>
     <script src="scripts/services/billing-addresses-service.js"></script>
+    <script src="scripts/services/offices-service.js"></script>
+    <script src="scripts/services/profile-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
@@ -125,4 +130,5 @@
   <body ng-app="porttare" ng-controller="SiteController as siteVm">
     <ion-nav-view></ion-nav-view>
   </body>
+
 </html>
