--- a/app/index.html
+++ b/app/index.html
@@ -134,6 +134,7 @@
     <script src="scripts/directives/toggle-expand/toggle-expand.js"></script>
     <script src="scripts/directives/provider-profile-schedule/provider-profile-schedule.js"></script>
     <script src="scripts/directives/user-image/user-image.js"></script>
+    <script src="scripts/directives/selectize/selectize.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
