--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,8 @@
     <script src="scripts/controllers/billing-addresses-controller.js"></script>
     <script src="scripts/controllers/offices-controller.js"></script>
     <script src="scripts/controllers/office-controller.js"></script>
+    <script src="scripts/controllers/dispatchers-controller.js"></script>
+    <script src="scripts/controllers/dispatcher-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
@@ -109,6 +111,7 @@
     <script src="scripts/services/wishlists-service.js"></script>
     <script src="scripts/services/billing-addresses-service.js"></script>
     <script src="scripts/services/offices-service.js"></script>
+    <script src="scripts/services/dispatchers-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
