issue 832: Accept Terms and Conditions:
*Adding of a template to show terms and conditions
*Adding of a controller
*Modifing of the routes file
*Modifing of userAuthService file

--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,7 @@
     <script src="scripts/controllers/dispatchers-controller.js"></script>
     <script src="scripts/controllers/dispatcher-controller.js"></script>
     <script src="scripts/controllers/provider/item-controller.js"></script>
+    <script src="scripts/controllers/terms-and-cond-controller.js"></script>
     <script src="scripts/controllers/customer/orders/customer-orders-index-controller.js"></script>
     <script src="scripts/controllers/customer/orders/customer-order-controller.js"></script>
     <!-- services -->
