--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
     <script src="scripts/controllers/office-controller.js"></script>
     <script src="scripts/controllers/dispatchers-controller.js"></script>
     <script src="scripts/controllers/dispatcher-controller.js"></script>
+    <script src="scripts/controllers/provider/item-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
