--- a/app/index.html
+++ b/app/index.html
@@ -122,6 +122,7 @@
     <script src="scripts/directives/action-button/action-button.js"></script>
     <script src="scripts/directives/slick-wrapper/slick-wrapper.js"></script>
     <script src="scripts/directives/slick-provider/slick-provider.js"></script>
+    <script src="scripts/directives/slick-item/slick-item.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
