--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
     <script src="scripts/controllers/profile/profile-info-controller.js"></script>
     <script src="scripts/controllers/profile/profile-create-addresses-controller.js"></script>
     <script src="scripts/controllers/profile/profile-update-addresses-controller.js"></script>
+    <script src="scripts/controllers/profile-provider/profile-provider-update-info-controller.js"></script>
     <script src="scripts/controllers/cart-controller.js"></script>
     <script src="scripts/controllers/courier/orders.js"></script>
     <script src="scripts/controllers/menu-controller.js"></script>
@@ -123,6 +124,8 @@
     <script src="scripts/directives/slick-wrapper/slick-wrapper.js"></script>
     <script src="scripts/directives/slick-provider/slick-provider.js"></script>
     <script src="scripts/directives/slick-item/slick-item.js"></script>
+    <script src="scripts/directives/methods-payment/methods-payment.js"></script>
+    <script src="scripts/directives/account-type/account-type.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
