--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/ng-file-upload/dist/ng-file-upload.js"></script>
+    <script src="bower_components/angular-elastic/elastic.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
