--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,7 @@
     <script src="scripts/services/billing-addresses-service.js"></script>
     <script src="scripts/services/offices-service.js"></script>
     <script src="scripts/services/dispatchers-service.js"></script>
+    <script src="scripts/services/item-categories-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
@@ -135,6 +136,7 @@
     <script src="scripts/directives/provider-profile-schedule/provider-profile-schedule.js"></script>
     <script src="scripts/directives/user-image/user-image.js"></script>
     <script src="scripts/directives/selectize/selectize.js"></script>
+    <script src="scripts/directives/selectize/selectize-provider-item-category.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
