--- a/app/index.html
+++ b/app/index.html
@@ -131,6 +131,7 @@
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
     <script src="scripts/filters/custom-date.js"></script>
+    <script src="scripts/filters/time.js"></script>
     <!-- endbuild -->
   </head>
 
