--- a/app/index.html
+++ b/app/index.html
@@ -132,6 +132,7 @@
     <script src="scripts/filters/age.js"></script>
     <script src="scripts/filters/format-date.js"></script>
     <script src="scripts/filters/time-schedule.js"></script>
+    <script src="scripts/filters/price-currency.js"></script>
     <!-- endbuild -->
   </head>
 
