--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,7 @@
     <script src="scripts/directives/slick-item/slick-item.js"></script>
     <script src="scripts/directives/payment-methods/payment-methods.js"></script>
     <script src="scripts/directives/account-type/account-type.js"></script>
+    <script src="scripts/directives/toggle-expand/toggle-expand.js"></script>
     <script src="scripts/directives/provider-profile-schedule/provider-profile-schedule.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
