--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,9 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- moment locales -->
+    <script src="bower_components/moment/locale/es.js"></script>
+
     <!-- your app's js -->
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
@@ -60,6 +63,7 @@
     <script src="scripts/config/http-provider.js"></script>
     <script src="scripts/config/routes.js"></script>
     <script src="scripts/config/ionic-config.js"></script>
+    <script src="scripts/config/moment-config.js"></script>
     <!-- controllers -->
     <script src="scripts/controllers/site-controller.js"></script>
     <script src="scripts/controllers/login-controller.js"></script>
@@ -93,6 +97,7 @@
     <script src="scripts/controllers/dispatchers-controller.js"></script>
     <script src="scripts/controllers/dispatcher-controller.js"></script>
     <script src="scripts/controllers/provider/item-controller.js"></script>
+    <script src="scripts/controllers/customer/orders/customer-orders-index-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
@@ -120,6 +125,7 @@
     <script src="scripts/services/offices-service.js"></script>
     <script src="scripts/services/dispatchers-service.js"></script>
     <script src="scripts/services/item-categories-service.js"></script>
+    <script src="scripts/services/customer-orders-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
@@ -133,9 +139,9 @@
     <script src="scripts/directives/payment-methods/payment-methods.js"></script>
     <script src="scripts/directives/account-type/account-type.js"></script>
     <script src="scripts/directives/toggle-expand/toggle-expand.js"></script>
+    <script src="scripts/directives/cart/order-items-total.js"></script>
     <script src="scripts/directives/provider-profile-schedule/provider-profile-schedule.js"></script>
     <script src="scripts/directives/user-image/user-image.js"></script>
-    <script src="scripts/directives/selectize/selectize.js"></script>
     <script src="scripts/directives/selectize/selectize-provider-item-category.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
