polyfill Array.find

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
     <script src="bower_components/sifter/sifter.js"></script>
     <script src="bower_components/microplugin/src/microplugin.js"></script>
     <script src="bower_components/selectize/dist/js/selectize.js"></script>
+    <script src="bower_components/array-find/index.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
