--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,7 @@
     <script src="scripts/controllers/dispatcher-controller.js"></script>
     <script src="scripts/controllers/provider/item-controller.js"></script>
     <script src="scripts/controllers/customer/orders/customer-orders-index-controller.js"></script>
+    <script src="scripts/controllers/customer/orders/customer-order-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
