Provider profile edit payment methods (#174)
* GemFile.lock

* payment-methods para revisar

* Gemfile

* payment methods with includes()

* polyfill de array.prototype.includes()

* Array.prototype.includes polyfill

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,7 @@
     <script src="bower_components/microplugin/src/microplugin.js"></script>
     <script src="bower_components/selectize/dist/js/selectize.js"></script>
     <script src="bower_components/array-find/index.js"></script>
+    <script src="bower_components/mdn-array.prototype.includes/index.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
