use angular-touch
& enhance UI

--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
     <script src="bower_components/selectize/dist/js/selectize.js"></script>
     <script src="bower_components/array-find/index.js"></script>
     <script src="bower_components/mdn-array.prototype.includes/index.js"></script>
+    <script src="bower_components/angular-touch/angular-touch.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
