override moment defaults
so it uses es locale and minified version by default

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,8 @@
     <script src="bower_components/slick-carousel/slick/slick.js"></script>
     <script src="bower_components/angular-slick-carousel/dist/angular-slick.js"></script>
     <script src="bower_components/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
-    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/moment/min/moment.min.js"></script>
+    <script src="bower_components/moment/locale/es.js"></script>
     <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/ng-file-upload/dist/ng-file-upload.js"></script>
     <script src="bower_components/angular-elastic/elastic.js"></script>
@@ -52,9 +53,6 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-
-    <!-- moment locales -->
-    <script src="bower_components/moment/locale/es.js"></script>
 
     <!-- your app's js -->
     <!-- build:js scripts/scripts.js -->
