--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,14 @@
     <script src="bower_components/array-find/index.js"></script>
     <script src="bower_components/mdn-array.prototype.includes/index.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
+    <script src="bower_components/markerclustererplus/src/markerclusterer.js"></script>
+    <script src="bower_components/google-maps-utility-library-v3-markerwithlabel/dist/markerwithlabel.js"></script>
+    <script src="bower_components/google-maps-utility-library-v3-infobox/dist/infobox.js"></script>
+    <script src="bower_components/google-maps-utility-library-v3-keydragzoom/dist/keydragzoom.js"></script>
+    <script src="bower_components/js-rich-marker/src/richmarker.js"></script>
+    <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -67,6 +75,8 @@
     <script src="scripts/config/ionic-config.js"></script>
     <script src="scripts/config/moment-config.js"></script>
     <script src="scripts/config/touch-provider.js"></script>
+    <script src="scripts/config/gmaps-config.js"></script>
+
     <!-- controllers -->
     <script src="scripts/controllers/site-controller.js"></script>
     <script src="scripts/controllers/login-controller.js"></script>
