--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,7 @@
     <script src="scripts/controllers/provider/order-show-controller.js"></script>
     <script src="scripts/controllers/places-controller.js"></script>
     <script src="scripts/controllers/provider/provider-main-controller.js"></script>
+    <script src="scripts/controllers/courier/courier-order-show-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
