--- a/app/index.html
+++ b/app/index.html
@@ -152,6 +152,7 @@
     <script src="scripts/directives/selectize/selectize-provider-item-category.js"></script>
     <script src="scripts/directives/cart/order-delivery-nombre.js"></script>
     <script src="scripts/directives/maps/maps.js"></script>
+    <script src="scripts/directives/places-search-box/places-search-box.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
