--- a/app/index.html
+++ b/app/index.html
@@ -129,6 +129,7 @@
     <script src="scripts/services/dispatchers-service.js"></script>
     <script src="scripts/services/item-categories-service.js"></script>
     <script src="scripts/services/customer-orders-service.js"></script>
+    <script src="scripts/services/customer-order-delivery-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
