--- a/app/index.html
+++ b/app/index.html
@@ -148,6 +148,7 @@
     <script src="scripts/directives/provider-profile-schedule/provider-profile-schedule.js"></script>
     <script src="scripts/directives/user-image/user-image.js"></script>
     <script src="scripts/directives/selectize/selectize-provider-item-category.js"></script>
+    <script src="scripts/directives/cart/order-delivery-nombre.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
