--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
     <script src="scripts/config/routes.js"></script>
     <script src="scripts/config/ionic-config.js"></script>
     <script src="scripts/config/moment-config.js"></script>
+    <script src="scripts/config/touch-provider.js"></script>
     <!-- controllers -->
     <script src="scripts/controllers/site-controller.js"></script>
     <script src="scripts/controllers/login-controller.js"></script>
