--- a/app/index.html
+++ b/app/index.html
@@ -133,6 +133,7 @@
     <script src="scripts/services/customer-orders-service.js"></script>
     <script src="scripts/services/customer-order-delivery-service.js"></script>
     <script src="scripts/services/pusher-service.js"></script>
+    <script src="scripts/services/geocoding-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
