directiva de boton de carrito con numero de item

--- a/app/index.html
+++ b/app/index.html
@@ -156,6 +156,7 @@
     <script src="scripts/directives/cart/order-delivery-nombre.js"></script>
     <script src="scripts/directives/maps/maps.js"></script>
     <script src="scripts/directives/places-search-box/places-search-box.js"></script>
+    <script src="scripts/directives/cart-button/cart-button.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
