--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
     <script src="scripts/controllers/customer/orders/customer-orders-index-controller.js"></script>
     <script src="scripts/controllers/customer/orders/customer-order-controller.js"></script>
     <script src="scripts/controllers/provider/orders-controller.js"></script>
+    <script src="scripts/controllers/provider/order-show-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
