carrito se muestra siempre asi no haya ordenes

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
     <script src="bower_components/array-find/index.js"></script>
     <script src="bower_components/mdn-array.prototype.includes/index.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/array polyfill/array-polyfill.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
