Just moving logic to a service

--- a/app/index.html
+++ b/app/index.html
@@ -136,6 +136,7 @@
     <script src="scripts/services/pusher-service.js"></script>
     <script src="scripts/services/geocoding-service.js"></script>
     <script src="scripts/services/provider-customer-orders-service.js"></script>
+    <script src="scripts/services/authorization-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
