--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,7 @@
     <script src="scripts/controllers/provider/orders-controller.js"></script>
     <script src="scripts/controllers/provider/order-show-controller.js"></script>
     <script src="scripts/controllers/places-controller.js"></script>
+    <script src="scripts/controllers/profile/profile-controller.js"></script>
     <!-- services -->
     <script src="scripts/services/geolocation-service.js"></script>
     <script src="scripts/services/interceptors-service.js"></script>
