--- a/app/index.html
+++ b/app/index.html
@@ -162,6 +162,7 @@
     <script src="scripts/directives/maps/maps.js"></script>
     <script src="scripts/directives/places-search-box/places-search-box.js"></script>
     <script src="scripts/directives/cart-button/cart-button.js"></script>
+    <script src="scripts/directives/sidebar-header-current-user/sidebar-header-current-user.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
