Add password filds in edit form

--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,7 @@
     <script src="bower_components/mdn-array.prototype.includes/index.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/array-polyfill/array-polyfill.js"></script>
+    <script src="bower_components/angular-input-match/dist/angular-input-match.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
