--- a/app/index.html
+++ b/app/index.html
@@ -143,6 +143,7 @@
     <script src="scripts/services/provider-customer-orders-service.js"></script>
     <script src="scripts/services/authorization-service.js"></script>
     <script src="scripts/services/places-service.js"></script>
+    <script src="scripts/services/user-accounts.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
