--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
     <script src="scripts/config/ionic-config.js"></script>
     <script src="scripts/config/moment-config.js"></script>
     <script src="scripts/config/touch-provider.js"></script>
+    <script src="scripts/config/status-bar.js"></script>
     <!-- controllers -->
     <script src="scripts/controllers/site-controller.js"></script>
     <script src="scripts/controllers/login-controller.js"></script>
