--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
     <script src="bower_components/array-polyfill/array-polyfill.js"></script>
     <script src="bower_components/angular-input-match/dist/angular-input-match.min.js"></script>
     <script src="bower_components/number-is-integer/is-integer.js"></script>
+    <script src="bower_components/Geolib/dist/geolib.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
