--- a/app/index.html
+++ b/app/index.html
@@ -165,6 +165,8 @@
     <script src="scripts/directives/user-image/user-image.js"></script>
     <script src="scripts/directives/selectize/selectize-provider-item-category.js"></script>
     <script src="scripts/directives/cart/order-delivery-nombre.js"></script>
+    <script src="scripts/directives/cart/order-delivery-method.js"></script>
+    <script src="scripts/directives/cart/order-delivery-schedule-date.js"></script>
     <script src="scripts/directives/maps/maps.js"></script>
     <script src="scripts/directives/places-search-box/places-search-box.js"></script>
     <script src="scripts/directives/cart-button/cart-button.js"></script>
