--- a/app/index.html
+++ b/app/index.html
@@ -172,6 +172,7 @@
     <script src="scripts/directives/cart-button/cart-button.js"></script>
     <script src="scripts/directives/sidebar-header-current-user/sidebar-header-current-user.js"></script>
     <script src="scripts/directives/provider-notifications/provider-notifications.js"></script>
+    <script src="scripts/directives/sidebar-only-on-categories/sidebar-only-on-categories.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
