--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,10 @@
     <script src="scripts/config/translations-config.js"></script>
     <script src="scripts/config/app-constants.js"></script>
     <script src="scripts/config/http-provider.js"></script>
-    <script src="scripts/config/routes.js"></script>
+    <script src="scripts/config/routes/core-routes.js"></script>
+    <script src="scripts/config/routes/app-routes.js"></script>
+    <script src="scripts/config/routes/provider-routes.js"></script>
+    <script src="scripts/config/routes/courier-routes.js"></script>
     <script src="scripts/config/ionic-config.js"></script>
     <script src="scripts/config/moment-config.js"></script>
     <script src="scripts/config/touch-provider.js"></script>
