--- a/app/index.html
+++ b/app/index.html
@@ -135,6 +135,7 @@
     <script src="scripts/services/profile/profile-addresses-service.js"></script>
     <script src="scripts/services/error-handler-service.js"></script>
     <script src="scripts/services/maps-service.js"></script>
+    <script src="scripts/services/map-directions-service.js"></script>
     <script src="scripts/services/cart-service.js"></script>
     <script src="scripts/services/user-auth-service.js"></script>
     <script src="scripts/services/wishlists-service.js"></script>
