--- a/app/index.html
+++ b/app/index.html
@@ -180,6 +180,7 @@
     <script src="scripts/directives/provider-notifications/provider-notifications.js"></script>
     <script src="scripts/directives/sidebar-only-on-categories/sidebar-only-on-categories.js"></script>
     <script src="scripts/directives/price/price.js"></script>
+    <script src="scripts/directives/humanized-countdown-time/humanized-countdown-time.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
