providers’ estimate dispatch time

--- a/app/index.html
+++ b/app/index.html
@@ -181,6 +181,7 @@
     <script src="scripts/directives/sidebar-only-on-categories/sidebar-only-on-categories.js"></script>
     <script src="scripts/directives/price/price.js"></script>
     <script src="scripts/directives/humanized-countdown-time/humanized-countdown-time.js"></script>
+    <script src="scripts/directives/provider-estimated-time-for-dispatch-selectize/provider-estimated-time-for-dispatch-selectize.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
