--- a/app/index.html
+++ b/app/index.html
@@ -170,6 +170,7 @@
     <script src="scripts/directives/provider-profile-schedule/provider-profile-schedule.js"></script>
     <script src="scripts/directives/user-image/user-image.js"></script>
     <script src="scripts/directives/selectize/selectize-provider-item-category.js"></script>
+    <script src="scripts/directives/selectize/selectize-courier-time.js"></script>
     <script src="scripts/directives/cart/order-delivery-nombre.js"></script>
     <script src="scripts/directives/cart/order-delivery-method.js"></script>
     <script src="scripts/directives/cart/order-delivery-schedule-date.js"></script>
