--- a/app/index.html
+++ b/app/index.html
@@ -183,6 +183,7 @@
     <script src="scripts/directives/humanized-countdown-time/humanized-countdown-time.js"></script>
     <script src="scripts/directives/provider-estimated-time-for-dispatch-selectize/provider-estimated-time-for-dispatch-selectize.js"></script>
     <script src="scripts/directives/distance-between/distance-between.js"></script>
+    <script src="scripts/directives/shipping-request-dispatch-at/shipping-request-dispatch-at.js"></script>
     <!-- filters -->
     <script src="scripts/filters/default-image.js"></script>
     <script src="scripts/filters/age.js"></script>
