bootstrapping push notifications

--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
     <script src="scripts/config/touch-provider.js"></script>
     <script src="scripts/config/status-bar.js"></script>
     <script src="scripts/config/push-notifications.js"></script>
+    <script src="scripts/config/notification-handlers.js"></script>
     <!-- controllers -->
     <script src="scripts/controllers/site-controller.js"></script>
     <script src="scripts/controllers/login-controller.js"></script>
