Add ngtemplates WIP

--- a/app/index.html
+++ b/app/index.html
@@ -192,6 +192,9 @@
     <script src="scripts/filters/age.js"></script>
     <script src="scripts/filters/to-date.js"></script>
     <script src="scripts/filters/format-date.js"></script>
+    <script src="templates.js">
+
+    </script>
     <!-- endbuild -->
   </head>
 
