Add ngtemplates and remove jade

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
     <!-- your app's js -->
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/templates.js"></script>
     <script src="scripts/config/fake-storage.js"></script>
     <script src="scripts/config/constants-config.js"></script>
     <script src="scripts/config/login-config.js"></script>
