replace number.isInteger polyfill

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/array-polyfill/array-polyfill.js"></script>
     <script src="bower_components/angular-input-match/dist/angular-input-match.min.js"></script>
-    <script src="bower_components/number-is-integer/is-integer.js"></script>
+    <script src="bower_components/number.isinteger/index.js"></script>
     <script src="bower_components/Geolib/dist/geolib.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
