Testing for preproduction and production

--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
 
     <!-- your app's js -->
     <!-- build:js scripts/scripts.js -->
+    <script src="bower_components/number.isinteger/index.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/templates.js"></script>
     <script src="scripts/config/fake-storage.js"></script>
