Now can add to cart without user

--- a/app/index.html
+++ b/app/index.html
@@ -159,6 +159,7 @@
     <script src="scripts/services/tos-service.js"></script>
     <script src="scripts/services/shipping-request-service.js"></script>
     <script src="scripts/services/user-devices-service.js"></script>
+    <script src="scripts/services/virtual-cart-service.js"></script>
     <!-- directives -->
     <script src="scripts/directives/back-button/back-button.js"></script>
     <script src="scripts/directives/autosize-input/autosize-input.js"></script>
